manifests/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: myapp
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
